--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,19 +1,26 @@
 body {
     background-color: #82ABA1;
-    color:#FFFFFF;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 70%;
+    height: 60%;
+    padding-top: 25%;
 };
 
 h2 {
-    font-family: "Lato", sans-serif;
+    font-family: "Impact", sans-serif;
     border-bottom: #E8AEB7, 5px, solid;
 };
 
+h6 {
+    color: #9278C2;
+    font-family: "Impact", sans-serif;
+}
+
 p {
-    font-family: "Mulish", sans-serif;
     border:#FFFFFF, 5px, solid;
+    font-family: "Arial", sans-serif;
 };
 
 button {
@@ -30,8 +37,8 @@ button {
     border: #B8E1FF 10px inset;
     width: 60%;
     height: 50%
-    /* display: block; */
-    /* align-self: center; */
+    display: block;
+    align-self: center;
 }
 
 #quiz {
